# eight_point_calibration

./: CMakeLists.txt  CameraExtrinsics.h  CameraIntrinsics.h  EightPointCalibrator.cpp  EightPointCalibrator.h
tests/: CalibratorFixture.cpp  CalibratorFixture.h  checkCalibrator.cpp  visualizeCamera.cpp
